# networkio

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  make.bat
.github/workflows/: build.yml
cmake/: FindBotan.cmake  arch_target.cmake  deps.cmake  out_dirs.cmake
examples/: CMakeLists.txt
examples/http/: client.cpp  hostinfo.h  login.cpp  server.cpp
examples/mux/: client.cpp  server.cpp
examples/sendfile/: client.cpp  hostinfo.h  server.cpp
examples/tcp/: client.cpp  server.cpp
examples/tls/: client.cpp  hostinfo.h  server.cpp
examples/udp/: client.cpp  server.cpp
git/: format_all.sh  install_hooks.sh
git/hooks/: pre_commit.sh
tests/: CMakeLists.txt  tests.h
tests/mux/: mux.cpp
tests/packet/: packet.cpp
